<resources>
    <string name="app_name" translatable="false">GOBY24</string>
    <string name="select_country">Choose your country*</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="your_ride_your_choice" translatable="false">Your ride. your choice</string>
    <string name="search" translatable="false">Search</string>
    <string name="get_stgarted_today" translatable="false">Get started today!</string>
    <string name="find_ride" translatable="false">Find a ride</string>
    <string name="search_ride" translatable="false">Search a ride</string>
    <string name="offer_ride" translatable="false">Offer a ride</string>
    <string name="tourist_package" translatable="false">Tourist Package</string>
    <string name="tourist_spot" translatable="false">Tourist Spot</string>
    <string name="choose_city" translatable="false">Choose City</string>
    <string name="where_to_go" translatable="false">Where do you want to go</string>
    <string name="see_most_popular_rides" translatable="false">See our most popular rides</string>
    <string name="homepage_hint" translatable="false">Go literally anywhere from anywhere\n3 things you\'ll love about Goby24</string>
    <string name="footer_home" translatable="false">Home</string>
    <string name="footer_search" translatable="false">Search a ride</string>
    <string name="footer_offer" translatable="false">Offer a ride</string>
    <string name="footer_tourist_package" translatable="false">Tourist Package</string>
    <string name="footer_profile" translatable="false">Profile</string>
    <string name="hint_leaving_from" translatable="false">Leaving from...</string>
    <string name="hint_going_to" translatable="false">Going to...</string>
    <string name="signup_title" translatable="false">Register here</string>
    <string name="hint_first_name" translatable="false">First name</string>
    <string name="hint_last_name" translatable="false">Last name</string>
    <string name="hint_phone" translatable="false">Phone Number</string>
    <string name="hint_birthday" translatable="false">Date of Birth</string>
    <string name="hint_email" translatable="false">Email Id</string>
    <string name="hint_pwd" translatable="false">Password</string>
    <string name="signup" translatable="false">Sign Up</string>
    <string name="or" translatable="false">Or</string>
    <string name="google_sign" translatable="false">Continue with Google</string>
    <string name="fb_sign" translatable="false">Continue with Facebook</string>
    <string name="apple_sign" translatable="false">Continue with Apple</string>
    <string name="have_account" translatable="false">Already have an account?</string>
    <string name="signin" translatable="false">Sign in</string>
    <string name="signin_first_title" translatable="false">You need to login first</string>
    <string name="global_continue" translatable="false">Continue</string>
    <string name="global_next" translatable="false">Next</string>
    <string name="global_previous" translatable="false">Prev</string>
    <string name="global_done" translatable="false">Done</string>
    <string name="no_account" translatable="false">Don\'t have an account?</string>
    <string name="signin_title" translatable="false">Sign in here</string>
    <string name="forgot_pwd" translatable="false">Forgot Password</string>
    <string name="forgot_pwd_title" translatable="false">Forgot Password</string>
    <string name="forgot_pwd_hint" translatable="false">Enter your email for the verification process</string>
    <string name="empty_firstname" translatable="false">Please enter your first name!</string>
    <string name="empty_lastname" translatable="false">Please enter your last name!</string>
    <string name="empty_mobile" translatable="false">Please enter your phone number!</string>
    <string name="empty_dob" translatable="false">Please enter your birthday!</string>
    <string name="invalid_email" translatable="false">Please enter the valid email!</string>
    <string name="empty_password" translatable="false">Please enter the password!</string>
    <string name="signup_failed" translatable="false">Sign up failed!</string>
    <string name="signin_failed" translatable="false">Sign in failed!</string>
    <string name="global_failure" translatable="false">Operation Failure!</string>
    <string name="empty_confirm_password" translatable="false">Please confirm the password!</string>
    <string name="pwd_not_match" translatable="false">Password mismatch!</string>
    <string name="email_sample" translatable="false">Jane@example.com</string>
    <string name="confirm_pwd" translatable="false">Confirm Password</string>
    <string name="change_pwd_title" translatable="false">Set the new password for your account so\nyou can login and access all the features.</string>
    <string name="reset_pwd" translatable="false">Reset password</string>
    <string name="confirm_logout_title" translatable="false">Goby24</string>
    <string name="confirm_logout_msg" translatable="false">Are you sure to log out?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint" translatable="false">Search&#8230;</string>
    <string name="no_result_found" translatable="false">No result found</string>
    <string name="country_code_and_phone_code" translatable="false">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code" translatable="false">%1$s +%2$s</string>
    <string name="country_full_name_and_name_code" translatable="false">%1$s (%2$s)</string>
    <string name="country_full_name_name_code_and_phone_code" translatable="false">%1$s (%2$s) +%3$s</string>
    <string name="error_unregister_carrier_number" translatable="false">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="dashboard_title" translatable="false">Dashboard</string>
    <string name="profile_title" translatable="false">Profile</string>
    <string name="inbox_title" translatable="false">Inbox</string>
    <string name="my_rides_title" translatable="false">My Rides</string>
    <string name="my_ride_title" translatable="false">My Ride</string>
    <string name="payments_refunds_title" translatable="false">Payments &amp; refunds</string>
    <string name="other" translatable="false">Other</string>
    <string name="change_language_title" translatable="false">Change Language</string>
    <string name="privacy_policy_title" translatable="false">Privacy policy</string>
    <string name="tac_title" translatable="false">Terms and conditions</string>
    <string name="contact_support_title" translatable="false">Contact Support</string>
    <string name="logout_title" translatable="false">Log out</string>
    <string name="messages" translatable="false">Messages</string>
    <string name="your_current_level" translatable="false">Your current level</string>
    <string name="level_new_comer" translatable="false">NEWCOMER</string>
    <string name="view_edit_profile" translatable="false">View and edit your profile</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="notifications_msg" translatable="false">Here is what\'s going on today</string>
    <string name="useful_links" translatable="false">Useful Links</string>
    <string name="ratings" translatable="false">Ratings</string>
    <string name="about_you" translatable="false">About You</string>
    <string name="account" translatable="false">Account</string>
    <string name="traveller" translatable="false">Traveller</string>
    <string name="driver" translatable="false">Driver</string>
    <string name="add_profile_picture" translatable="false">Add a profile picture</string>
    <string name="add_mini_bio" translatable="false">Add a mini bio</string>
    <string name="edit_personal_details" translatable="false">Edit personal details</string>
    <string name="edit_travel_preferences" translatable="false">Edit travel preferences</string>
    <string name="verify_govt_id" translatable="false">Verify your Govt. ID</string>
    <string name="verify_phone_number" translatable="false">Verify your phone number</string>
    <string name="verify_email_address" translatable="false">Verify email address</string>
    <string name="add_vehicle" translatable="false">Add vehicle</string>
    <string name="ratings_given" translatable="false">Ratings given</string>
    <string name="password" translatable="false">Password</string>
    <string name="available_funds" translatable="false">Available funds</string>
    <string name="bank_details" translatable="false">Bank details</string>
    <string name="add_completed_transactions" translatable="false">Add completed transactions</string>
    <string name="data_protection" translatable="false">Data protection</string>
    <string name="close_my_account" translatable="false">Close my account</string>
    <string name="profile_picture_msg" translatable="false">Don\'t wear sunglasses,\nlook straight ahead and\nmake sure you\'re alone.</string>
    <string name="take_photo" translatable="false">Take photo</string>
    <string name="choose_picture" translatable="false">Choose a picture</string>
    <string name="edit_travel_preferences_title" translatable="false">Travel preferences</string>
    <string-array name="chattiness">
        <item>I am Chatty when I feel comfortable</item>
        <item>I am Chatty when I am free</item>
        <item>I am always Chatty</item>
    </string-array>
    <string-array name="music">
        <item>I\'ll jam depending on the mood</item>
        <item>I\'ll always listen the music</item>
    </string-array>
    <string-array name="smoking">
        <item>Cigarette breaks outside the car are ok</item>
        <item>Cigarette breaks inside the car are ok</item>
    </string-array>
    <string-array name="pets">
        <item>I\'ll travel with pets depending on the animal</item>
        <item>I\'ll travel with all kinds of pets</item>
    </string-array>
    <string name="verify" translatable="false">Verify</string>
    <string name="verify_name_msg" translatable="false">First verify your name</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="last_name" translatable="false">Last name</string>
    <string name="full_name" translatable="false">Full name</string>
    <string name="id" translatable="false">Id</string>
    <string name="enter_first_name" translatable="false">Please enter your first name!</string>
    <string name="enter_last_name" translatable="false">Please enter your last name!</string>
    <string name="enter_valid_otp" translatable="false">Please enter the valid OTP!</string>
    <string name="verify_id_subtitle" translatable="false">Verify your ID</string>
    <string name="verify_id_message" translatable="false">Select the type of document\nyou would like to upload</string>
    <string name="upload_photo_card_title" translatable="false">Front of card</string>
    <string name="upload_photo_card_msg" translatable="false">Upload a photo of the front\nof your card</string>
    <string name="upload_passport_title" translatable="false">Passport photo page</string>
    <string name="upload_passport_msg1" translatable="false">Upload a photo of\nyour passport photo page</string>
    <string name="upload_passport_msg2" translatable="false">Upload a photo of your\npassport</string>
    <string name="upload_passport_msg3" translatable="false">Scans and photocopies are\naccepted.</string>
    <string name="upload_passport_msg4" translatable="false">Your document should be\nclear and fully visible</string>
</resources>