<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_frag_upload_passport_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/left_arrow_black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_logo_height"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_frag_upload_passport_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:text="@string/upload_passport_title"
            android:textColor="@color/txtclr_black"
            android:textSize="@dimen/fontsize_extra_large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_frag_upload_passport_camera"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:src="@drawable/ic_camera_black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_frag_upload_passport_msg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_normal"
                    android:text="@string/upload_passport_msg1"
                    android:textAlignment="center"
                    android:textColor="@color/txtclr_gray"
                    android:textSize="@dimen/fontsize_normal" />

                <TextView
                    android:id="@+id/tv_frag_upload_passport_msg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_normal"
                    android:text="@string/upload_passport_msg2"
                    android:textAlignment="center"
                    android:textColor="@color/txtclr_black"
                    android:textSize="@dimen/fontsize_extra_large"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_frag_upload_passport_msg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_normal"
                    android:text="@string/upload_passport_msg3"
                    android:textAlignment="center"
                    android:textColor="@color/txtclr_gray"
                    android:textSize="@dimen/fontsize_normal" />

                <TextView
                    android:id="@+id/tv_frag_upload_passport_msg4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_small"
                    android:text="@string/upload_passport_msg4"
                    android:textAlignment="center"
                    android:textColor="@color/txtclr_gray"
                    android:textSize="@dimen/fontsize_normal" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_frag_upload_passport_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_cyan_selector"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/global_continue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_normal" />
    </LinearLayout>
</RelativeLayout>