<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_frag_forgot_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:text="@string/forgot_pwd_title"
            android:textColor="@color/txtclr_black"
            android:textSize="@dimen/fontsize_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_frag_forgot_pwd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:text="@string/forgot_pwd_hint"
            android:textColor="@color/txtclr_black"
            android:textSize="@dimen/fontsize_small" />

        <EditText
            android:id="@+id/ed_frag_forgot_pwd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:background="@drawable/bg_editable_gray_light_normal"
            android:hint="@string/email_sample"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/txtclr_black"
            android:textColorHint="@color/txtclr_placeholder_light_gray"
            android:textSize="@dimen/fontsize_small" />

        <TextView
            android:id="@+id/tv_frag_forgot_pwd_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_normal"
            android:background="@drawable/bg_cyan_selector"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/global_continue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_normal" />
    </LinearLayout>
</RelativeLayout>