<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ScrollView
        android:id="@+id/sv_frag_signin_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="30dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_logo_height"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_frag_signin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:text="@string/signin_title"
                android:textColor="@color/txtclr_black"
                android:textSize="@dimen/fontsize_normal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_frag_signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/bg_editable_gray_light_normal"
                android:hint="@string/email_sample"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/txtclr_black"
                android:textColorHint="@color/txtclr_placeholder_light_gray"
                android:textSize="@dimen/fontsize_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/bg_editable_gray_light_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/ed_frag_signin_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/txtclr_black"
                    android:textColorHint="@color/txtclr_placeholder_light_gray"
                    android:textSize="@dimen/fontsize_small" />

                <ImageView
                    android:id="@+id/iv_frag_signin_show_pwd"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/show_password" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_frag_signin_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/bg_cyan_selector"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signin"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontsize_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/vertical_margin_normal">

                <TextView
                    android:id="@+id/tv_frag_signin_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fontsize_normal" />

                <TextView
                    android:id="@+id/tv_frag_signin_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/cyan_light"
                    android:textSize="@dimen/fontsize_normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_frag_signin_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:text="@string/forgot_pwd"
                android:textColor="@color/cyan_light"
                android:textSize="@dimen/fontsize_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/vertical_margin_normal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_frag_signin_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fontsize_normal" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_frag_signin_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/rounded_darker_gray_border_selector"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_frag_signin_google"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_google" />

                <TextView
                    android:id="@+id/tv_frag_signin_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:paddingEnd="15dp"
                    android:text="@string/google_sign"
                    android:textColor="@color/txtclr_black"
                    android:textSize="@dimen/fontsize_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_frag_signin_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/bg_fb_selector"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_frag_signin_fb"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_facebook" />

                <TextView
                    android:id="@+id/tv_frag_signin_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:text="@string/fb_sign"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontsize_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_frag_signin_apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_normal"
                android:background="@drawable/bg_apple_selector"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/iv_frag_signin_apple"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_apple" />

                <TextView
                    android:id="@+id/tv_frag_signin_apple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:paddingEnd="23dp"
                    android:text="@string/apple_sign"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontsize_normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>